infrastructure/monitoring/gatus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gatus
spec:
  selector:
    app: gatus
  ports:
    - name: gatus-http
      port: 8080
      protocol: TCP
      targetPort: gatus-http
  sessionAffinity: None
  type: ClusterIP
